--- a/packages/indexer-common/package.json
+++ b/packages/indexer-common/package.json
@@ -46,8 +46,7 @@
     "scrypt": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.0.2.tgz",
     "sequelize": "6.3.5",
     "ts-custom-error": "^3.2.0",
-    "ts-jest": "26.4.3",
-    "typescript": "4.0.5"
+    "ts-jest": "26.4.3"
   },
   "devDependencies": {
     "@types/cors": "2.8.8",
