--- a/packages/indexer-service/package.json
+++ b/packages/indexer-service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@graphprotocol/indexer-service",
-  "version": "0.18.2",
+  "version": "0.18.4",
   "description": "Indexer service",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,7 +28,7 @@
   "dependencies": {
     "@google-cloud/profiler": "4.1.1",
     "@graphprotocol/common-ts": "1.7.0",
-    "@graphprotocol/indexer-common": "^0.18.2",
+    "@graphprotocol/indexer-common": "^0.18.4",
     "@graphprotocol/indexer-native": "^0.18.1",
     "@thi.ng/cache": "1.0.59",
     "@urql/core": "1.13.1",
@@ -70,7 +70,7 @@
     "jest": "26.6.1",
     "lerna": "3.22.1",
     "nock": "13.0.4",
-    "prettier": "2.1.2",
+    "prettier": "^2.4.1",
     "supertest": "6.0.0",
     "ts-jest": "26.4.3",
     "typescript": "4.0.5"
